@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+- phoromatic: Implement email notifications on result uploads
+
 Phoronix Test Suite 5.4 Milestone 4
 5 November 2014
 
